dropdown fix and table spacing fixes

--- a/scss/_table.scss
+++ b/scss/_table.scss
@@ -7,7 +7,7 @@
 /* table filtering styles starts here */
 .table-filtering {
   background-color: #F0EFEF;
-  padding: 16px 16px 8px 16px;
+  padding: 16px 16px 16px 16px;
   display: flex;
   flex-direction: row;
   align-items: center;
